fixed whitespace is landscape

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 @media screen and (orientation: landscape){
   #wrapper{
     position: fixed;
-    width: 2.65em;
+    width: 100%;
     height: 100%;
   }
 }
